# CppTeaching

./: LICENSE  README.md
.github/workflows/: run_test_hw1_t.yaml  run_test_hw2_t.yaml  run_test_hw3_t.yaml  run_test_hw4_t.yaml  run_test_hw5_t.yaml  run_test_hw6_t.yaml  run_test_hw8_t.yaml  testHW1.yml
01.09.23 compiling/: CMakeLists.txt  app  main.cpp  makefile  suite
01.09.23 compiling/headers/: output.hpp  square.hpp
01.09.23 compiling/tests/: hello_test.cpp
examples/01.09.23 compiling/src/: output.cpp  square.cpp
examples/fstreams/: CMakeLists.txt  main.cpp  struct.txt
homeWork/01/: CMakeLists.txt
homeWork/01/matrixMult/: func.cpp  func.hpp  main.cpp
homeWork/01/tests/: pyscript.ipynb
homeWork/01/tests/mtest/: asnv0.txt  asnv1.txt  asnv10.txt  asnv11.txt  asnv12.txt  asnv13.txt  asnv14.txt  asnv15.txt  asnv16.txt  asnv17.txt  asnv18.txt  asnv19.txt  asnv2.txt  asnv3.txt  asnv4.txt  asnv5.txt  asnv6.txt  asnv7.txt  asnv8.txt  asnv9.txt  text0.txt  text1.txt  text10.txt  text11.txt  text12.txt  text13.txt  text14.txt  text15.txt  text16.txt  text17.txt  text18.txt  text19.txt  text2.txt  text3.txt  text4.txt  text5.txt  text6.txt  text7.txt  text8.txt  text9.txt
homeWork/02/: CMakeLists.txt
homeWork/02/cstack/: cstack.cpp  cstack.hpp  main.cpp
homeWork/02/tests/: test_cstack.cpp
homeWork/03/: CMakeLists.txt
homeWork/03/imNumbers/: imNumbers.cpp  imNumbers.hpp  main.cpp
homeWork/03/tests/: test_imNumbers.cpp
homeWork/04/: CMakeLists.txt
homeWork/04/template/: cstack.cpp  cstack.hpp  imNumbers.cpp  imNumbers.hpp  main.cpp
homeWork/04/tests/: test_template.cpp
homeWork/05/: CMakeLists.txt  README.md
homeWork/05/template1/: main.cpp  template.hpp
homeWork/05/tests/: test_fib.cpp
homeWork/06/: CMakeLists.txt
homeWork/06/stl/: main.cpp  readme.md  stl.cpp  stl.hpp
homeWork/06/tests/: test_stl.cpp
homeWork/07/: DBdata.csv  DBdataBroken1.csv  DBdataBroken2.csv  readme.md
homeWork/07/stl/: fStream.cpp  fStream.hpp  main.cpp
homeWork/08/: CMakeLists.txt  Makefile  README.md  file_reader_raii.h  main.cpp  rectangle.h  test_read.txt  test_write.txt
homeWork/09/: readme.md
homeWork/10/: readme.md
homeWork/final_project/: requirements.md
homeWork/hw11/: README.md
